# gitai

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/gitai/: __init__.py  api.py  cli.py  config.py  core.py  git_utils.py  gitai.py
