[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitai"
version = "0.1.0"
description = "AI-powered Git commit message suggester"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0",
    "huggingface-hub",
]
authors = [{ name = "Noah Klaholz" }]
license = { text = "MIT" }
keywords = ["git", "ai", "cli", "commit", "huggingface"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://github.com/Noah-Klaholz/gitai"
Repository = "https://github.com/Noah-Klaholz/gitai"

[project.scripts]
gitai = "gitai.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gitai"]
